--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ h1 {
 .button {
   width: 80px;
   height: 30px;
-  background-color: blue;
+  background-color: darkblue;
   border-radius: 20px;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
